most html and most css

--- a/Projects/Broadway/index.html
+++ b/Projects/Broadway/index.html
@@ -9,18 +9,13 @@
   <body>
     <div class="header">
       <h1 class="intro">Broadway Design</h1>
-      <ul>
-        <li>Home</li>
-        <br>
-        <li>About</li>
-        <br>
-        <li>Work</li>
-        <br>
-        <li>Team</li>
-        <br>
-        <li>Contact</li>
-      </ul>
+      <p id="list"><a href="#">Home</a></p>
+      <p id="list"><a href="#">Process</a></p>
+      <p id="list"><a href="#">Work</a></p>
+      <p id="list"><a href="#">Team</a></p>
+      <p id="list"><a href="#">Contact</a></p>
     </div>
+
     <div class="text">
     <h2>Our Process</h2>
 
@@ -50,6 +45,6 @@
 
 </div>
 
-    <p class="footer">© Broadway 2017 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+    <p class="footer">© Broadway 2017></p> <p class="footerlinks"><a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
   </body>
 </html>
