done aside from footer and other touch ups

--- a/Projects/Broadway/index.html
+++ b/Projects/Broadway/index.html
@@ -9,11 +9,11 @@
   <body>
     <div class="header">
       <h1 class="intro">Broadway Design</h1>
-      <p id="list"><a href="#">Home</a></p>
-      <p id="list"><a href="#">Process</a></p>
-      <p id="list"><a href="#">Work</a></p>
-      <p id="list"><a href="#">Team</a></p>
-      <p id="list"><a href="#">Contact</a></p>
+      <p><a href="#" class="list">Home</a></p>
+      <p><a href="#" class="list">About</a></p>
+      <p><a href="#" class="list">Work</a></p>
+      <p><a href="#" class="list">Team</a></p>
+      <p><a href="#" class="list">Contact</a></p>
     </div>
 
     <div class="text">
