code complete other than some minor css stuff

--- a/Projects/Broadway/index.html
+++ b/Projects/Broadway/index.html
@@ -21,30 +21,30 @@
 
     <img src="./resources/images/identify.svg" alt="Twirly arrow" class="image">
     <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
+    <p id="summary">We focus on the most important details.</p>
 
     <img src="./resources/images/understand.svg" alt="Arrows pointing at each other in a cirle" class="image">
     <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+    <p id="summary">We study our projects inside and out.</p>
 
     <img src="./resources/images/execute.svg" alt="Arrow pointing to the right" class="image">
     <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+    <p id="summary">We put everything we have into our work.</p>
 
     <p class="des">Designed in New York</p>
     <h3>Portfolio</h3>
-    <p>Coming soon</p>
+    <p id="summary">Coming soon</p>
 
     <h3>Team</h3>
-    <p>We're Hiring!</p>
+    <p id="summary">We're Hiring!</p>
 
     <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
+    <p id="summary">Phone: (555)-555-5555</p>
+    <p id="summary">E-mail: test@example.com</p>
+    <p id="summary">Twitter: @test</p>
 
 </div>
 
-    <p class="footer">© Broadway 2017></p> <p class="footerlinks"><a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+    <p class="footer">© Broadway 2017 <a href="#" class="list2">Home</a> <a href="#" class="list2">About</a> <a href="#" class="list2">Work</a> <a href="#" class="list2">Team</a> <a href="#" class="list2">Contact</a></p>
   </body>
 </html>
