--- a/Projects/Tea-Cozy/index.html
+++ b/Projects/Tea-Cozy/index.html
@@ -15,24 +15,25 @@
       </div>
 
       <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#teaofthemonth">Featured Tea</a></span>
+        <span><a href="#location">Locations</a></span>
       </nav>
     </header>
 
     <!--opener section-->
     <div class="opener">
-      <img class="background" src="./resources/images/background.jpg" alt="Glass jar of tea leaves">
+      <img  id="mission" class="background" src="./resources/images/background.jpg" alt="Glass jar of tea leaves">
       <div class="openerinfo">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
 
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
 
 <!--Tea of the month section-->
-<div class="tea-of-the-month">
+<div class="tea-of-the-month" id="teaofthemonth">
   <h2>Tea of the Month</h2>
   <h4>What's Steeping at The Tea Cozy?</h4>
   <div class="teas">
@@ -65,7 +66,7 @@
 
 <!--Locations section-->
 <div class="locations">
-  <h2>Locations</h2>
+  <h2 id="location">Locations</h2>
   <div class="locationoptions">
 
     <div class="leftoption">
@@ -104,7 +105,7 @@
 
   <h5>917-555-8904</h5>
 </div>
-
+<br><br><br><br>
 <!--footer section-->
 
 <footer>copyright The Tea Cozy 2017</footer>
